# elsa

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  ROADMAP.md  pyproject.toml  setup.cfg  setup.py
benchmark/: CMakeLists.txt  benchmark_backward.cpp  benchmark_branchless.cpp  benchmark_cublas.cpp  benchmark_fft.cpp  benchmark_forbild.cpp  benchmark_forward.cpp  benchmark_lincomb.cpp  benchmark_norms.cpp  benchmark_shapes.cpp  benchmark_shepp_logan.cpp
benchmarks/: CMakeLists.txt  bench_DataContainerConstruction.cpp  bench_ExpressionTemplates.cpp  bench_Intersection.cpp  bench_Projectors.cpp  bench_Quickvec.cpp  bench_RayGenerationBench.cpp  bench_main.cpp
docs/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile.in  conf.py  contents.rst  data_handler_GPU.md  index.rst
docs/getting_started/: background.rst  background_math.md  getting_started.rst  in_depth.md  in_depth.rst  usage_teaser.md
docs/guides/: admm-cxx.md  index.rst  python_bindings.md  quickstart-cxx.md  quickstart-cxx.rst  shearlets-cxx.md
docs/modules/: core.rst  expression_templates.md  functionals.rst  generators.rst  index.rst  io.rst  linalg.rst  logging.rst  operators.rst  problems.rst  projectors.rst  projectors_cuda.rst  proximal_operators.rst  proximity_operators.rst  shearlets.rst  solvers.rst  storage.rst  wavelets.rst
docs/tools/: builds_docker.md  builds_infrastructure.md  infrastructure.rst
elsa/: CMakeLists.txt  elsa.h
elsa/config/: CMakeLists.txt  CUDADefines.h  DisableWarnings.h
elsa/core/: Backtrace.cpp  Backtrace.h  BlockDescriptor.cpp  BlockDescriptor.h  CMakeLists.txt  CTestTestfile.cmake  Cloneable.h  Complex.h  DataContainer.cpp  DataContainer.h  DataContainerIterator.h  DataDescriptor.cpp  DataDescriptor.h  DataHandler.h  DataHandlerCPU.cpp  DataHandlerCPU.h  DataHandlerGPU.cpp  DataHandlerGPU.h  DataHandlerMapCPU.cpp  DataHandlerMapCPU.h  DataHandlerMapGPU.h  DataHandlerRawMapCPU.cpp  DataHandlerRawMapCPU.h  DisableWarnings.h  Error.cpp  Error.h  Expression.h  ExpressionPredicates.h  Geometry.cpp  Geometry.h  IdenticalBlocksDescriptor.cpp  IdenticalBlocksDescriptor.h  LinearOperator.cpp  LinearOperator.h  PartitionDescriptor.cpp  PartitionDescriptor.h  Patchifier.cpp  Patchifier.h  RandomBlocksDescriptor.cpp  RandomBlocksDescriptor.h  (+7 more)
elsa/functionals/: AXDTStatRecon.cpp  AXDTStatRecon.h  AnisotropicTV.cpp  AnisotropicTV.h  BumpFunction.cpp  BumpFunction.h  CMakeLists.txt  ConstantFunctional.cpp  ConstantFunctional.h  Constraint.cpp  Constraint.h  EmissionLogLikelihood.cpp  EmissionLogLikelihood.h  Functional.cpp  Functional.h  Huber.cpp  Huber.h  Indicator.cpp  Indicator.h  IndicatorFunctionals.cpp  IndicatorFunctionals.h  IsotropicTV.cpp  IsotropicTV.h  L0PseudoNorm.cpp  L0PseudoNorm.h  L1Norm.cpp  L1Norm.h  L2NormPow2.cpp  L2NormPow2.h  L2Reg.cpp  L2Reg.h  L2Squared.cpp  L2Squared.h  LInfNorm.cpp  LInfNorm.h  LeastSquares.cpp  LeastSquares.h  LinearResidual.cpp  LinearResidual.h  Makefile  (+26 more)
elsa/generators/: BaseCircleTrajectoryGenerator.cpp  BaseCircleTrajectoryGenerator.h  Box.cpp  Box.h  CMakeLists.txt  CircleTrajectoryGenerator.cpp  CircleTrajectoryGenerator.h  CurvedCircleTrajectoryGenerator.cpp  CurvedCircleTrajectoryGenerator.h  Cylinder.cpp  Cylinder.h  CylinderFree.cpp  CylinderFree.h  EllipCylinder.cpp  EllipCylinder.h  EllipCylinderFree.cpp  EllipCylinderFree.h  EllipseGenerator.cpp  EllipseGenerator.h  Ellipsoid.cpp  Ellipsoid.h  ForbildData.h  ForbildPhantom.cpp  ForbildPhantom.h  LimitedAngleTrajectoryGenerator.cpp  LimitedAngleTrajectoryGenerator.h  NoiseGenerators.cpp  NoiseGenerators.h  PhantomDefines.cpp  PhantomDefines.h  PhantomGenerator.cpp  PhantomGenerator.h  Phantoms.cpp  Phantoms.h  Sphere.cpp  Sphere.h  SphereTrajectoryGenerator.cpp  SphereTrajectoryGenerator.h  Trajectories.cpp  Trajectories.h  (+2 more)
elsa/io/: CMakeLists.txt  EDFHandler.cpp  EDFHandler.h  IO.cpp  IO.h  MHDHandler.cpp  MHDHandler.h  PGMHandler.cpp  PGMHandler.h  bindings_hints.hpp  ioUtils.cpp  ioUtils.h
elsa/linalg/: CMakeLists.txt  ColumnVector.cpp  ColumnVector.h  Matrix.cpp  Matrix.h  RowVector.cpp  RowVector.h  Vector.cpp  Vector.h
elsa/logging/: CMakeLists.txt  LogGuard.cpp  LogGuard.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
elsa/metrics/: CMakeLists.txt  MSE.cpp  MSE.h  PSNR.cpp  PSNR.h  PeakSignaltoNoiseRatio.cpp  PeakSignaltoNoiseRatio.h  RelativeError.cpp  RelativeError.h
elsa/ml/: Activation.cpp  Activation.h  ActivationLayer.cpp  ActivationLayer.h  BackendAdaptor.h  CMakeLists.txt  Common.cpp  Common.h  Conv.cpp  Conv.h  ConvLayer.cpp  ConvLayer.h  CudnnDataContainerInterface.h  Dense.cpp  Dense.h  DenseLayer.cpp  DenseLayer.h  FixedLayer.cpp  FixedLayer.h  FutureImprovements.txt  Graph.h  Initializer.cpp  Initializer.h  Input.cpp  Input.h  LRNLayer.cpp  LRNLayer.h  Layer.cpp  Layer.h  Loss.cpp  Loss.h  Merging.cpp  Merging.h  Model.cpp  Model.h  Optimizer.cpp  Optimizer.h  Pooling.cpp  Pooling.h  PoolingLayer.cpp  (+20 more)
elsa/operators/: AXDTOperator.cpp  AXDTOperator.h  BlockLinearOperator.cpp  BlockLinearOperator.h  BlockScaling.cpp  BlockScaling.h  CMakeLists.txt  Convolution.cpp  Convolution.h  DeepDictionary.cpp  DeepDictionary.h  Dictionary.cpp  (+33 more)
examples/: CMakeLists.txt  deep_image_denoising.py  dl_models_example.cpp  example2d.cpp  example2d.py  example2d_admm.cpp  example2d_ctm.cpp  example2d_filtered_gmres.py  example2d_gmres.py  example2d_phase_contrast.cpp  example2d_phase_contrast.py  example2d_shadmm.cpp  example2d_shearlet.cpp  example3d.cpp  example3d.py  example3d_forbild.cpp  exampleAlexNet.cpp  example_argparse.cpp  fbp2d.cpp  filters.cpp  image_denoising.py  limited_angle_example2d.cpp  memory_resource_bench.cpp  mnist_learning_example.cpp  plotfilters.py  sdlx_example.cpp  shearlet_example.cpp  simple_recon2d.cpp  solver_experiments.py  sparse_sdlx_example2d.cpp  speed_test.cpp  temp_example2d_lat.cpp  temporary_example.cpp
pyelsa/: CMakeLists.txt
(+1043 files in other folders)
