[metadata]
name = "pyelsa"

[build-system]
requires = [
    "setuptools>=42",
    "pybind11~=2.10.3",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "pyelsa/tests"
