[metadata]
name = pyelsa
version = 0.0.1
author = David Frank
author-email = frankd@in.tum.de
description = Python package for elsa - an elegant framework for tomographic reconstruction
long-description = file: README:md
license = Apache License Version 2.0
license-file = LICENSE
project_urls =
    Source Code = https://gitlab.lrz.de/IP/elsa
    Documentation = https://ciip.in.tum.de/elsadocs/
    Bug Tracker = https://gitlab.lrz.de/IP/elsa/-/issues

[options]
python_requires = >=3.8, <4
